# enum_inliner

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: compiles.rs
