[package]
name = "enum_inliner"
description = "Define custom code that's inlined for every variant of an enum"
homepage = "https://github.com/lffg/enum_inliner"
repository = "https://github.com/lffg/enum_inliner"
version = "0.0.1-alpha.1"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[lints.clippy]
all = "warn"
pedantic = "warn"
wildcard_imports = { level = "allow", priority = 2 }

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit-mut",
    "parsing",
    "printing",
] }
quote = "1.0"
proc-macro2 = "1.0"
